<resources>
    <string name="app_name">Muse</string>
    <string name="txt_null">null</string>

    <!--_________________________________________________________________________________________-->
    <!--bottom sheet device-->
    <string name="txt_add_device">Add Device</string>

    <!--bottom sheet goal-->
    <string name="txt_add_goal">Add Goal</string>
    <string name="txt_i_want_my">I want my</string>
    <string name="txt_consumption_at_the_end_of">Consumption at the end of</string>
    <string name="txt_to_be">To be</string>
    <string name="BTxt_submit">Submit</string>

    <string-array name="spinner_time">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="unit">
        <item>Watt</item>
        <item>EGP</item>
    </string-array>

    <string-array name="aggregation">
        <item>Realtime</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="period">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="spinner_consumption">
        <item>100 W</item>
        <item>200 W</item>
        <item>300 W</item>
    </string-array>

    <string-array name="spinner_turn">
        <item>OFF</item>
        <item>ON</item>
    </string-array>

    <string-array name="spinner_at">
        <item>12 AM</item>
        <item>6 AM</item>
        <item>12 PM</item>
        <item>6 PM</item>
    </string-array>

    <string-array name="spinner_after">
        <item>30 Min</item>
        <item>1 H</item>
        <item>3 H</item>
        <item>6 H</item>
    </string-array>

    <!--_________________________________________________________________________________________-->
    <!--fragment chart day-->
    <string name="txt_day_consumptions">Day consumptions</string>

    <!--fragment chart month-->
    <string name="txt_month_consumptions">Month consumptions</string>

    <!--fragment chart week-->
    <string name="txt_week_consumptions">Week consumptions</string>

    <!--fragment chart year-->
    <string name="txt_year_consumptions">Year consumptions</string>

    <!--_________________________________________________________________________________________-->
    <!--line chart taps-->
    <string name="tit_day">Day</string>
    <string name="tit_week">Week</string>
    <string name="tit_month">Month</string>
    <string name="tit_year">Year</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment devices-->
    <string name="txt_no_devices_have_been_added">There are no devices</string>

    <!--fragment goals-->
    <string name="txt_goals">Goals</string>
    <string name="txt_no_goals_have_been_added">There are no goals</string>
    <string name="txt_no_schedules_have_been_added">There are no schedules</string>
    <string name="txt_no_custom_alert_have_been_added">There are no custom alerts</string>

    <!--fragment home-->
    <string name="txt_insights">Insights</string>
    <string name="txt_current">Current</string>
    <string name="txt_20_w_12egp">20 W</string>
    <string name="txt_average">Average</string>
    <string name="txt_200_w_120egp">200 W</string>
    <string name="txt_per_day">Per day</string>
    <string name="txt_30_kw_390egp">30 KW</string>
    <string name="txt_estimation">Estimation</string>
    <string name="txt_20_kw_260egp">20 KW</string>
    <string name="txt_used">Used</string>
    <string name="txt_100kw_1500kw">100KW/50EGP</string>
    <string name="txt_predicted">Predicted</string>
    <string name="txt_goal_will_be_achieved">Goal will be achieve</string>
    <string name="txt_goal_will_not_achieved">Goal won\'t achieve</string>
    <string name="txt_used_100kw">Used :100 KW</string>
    <string name="txt_estimated_200kw">Estimated :200 KW</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment login-->

    <!--hint -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!--Text-->
    <string name="txt_remember_me">Remember me</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_or">OR</string>
    <string name="txt_don_t_have_an_account">Don\'t have an account?</string>
    <string name="txt_sign_up">Sign Up</string>

    <!--Button text-->
    <string name="BTxt_login">Login</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment on first-->
    <string name="txt_welcome_to_muse">Welcome to Muse!</string>
    <string name="txt_kindly_follow_these_steps_to_connect_your_product_to_wi_fi_network_and_start_controlling_it_remotely_nplease_ensure_that_your_product_is_correctly_power_supplied">
        Kindly follow these steps to connect your product to Wi-Fi network and start controlling it remotely.\nplease ensure that your product is correctly power supplied.</string>
    <string name="txt_next">Next</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment on fourth-->
    <string name="txt_we_are_all_set_nenjoy_using_muse">We are all set.\nEnjoy using Muse!</string>
    <string name="txt_finish">Finish</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment on second-->
    <string name="txt_wi_fi_connection">Wi-Fi connection</string>
    <string name="txt_muse_will_be_configured_to_access_this_network">
        Muse will be configured to access this network</string>
    <string name="txt_etisalat545">Etisalat545</string>
    <string name="txt_connect_to_another_wi_fi">Connect to another Wi-Fi!</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment on third-->
    <string name="txt_press_the_red_button_on_your_muse_device">
        First,long press the red button on your Muse device.
    \n\nSecond,choose &amp; connect to Muse wifi network.</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment register-->
    <string name="have_an_account">Have an account?</string>
    <!--hint -->
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_device_id">Device ID</string>
    <!--    Button text-->
    <string name="BTxt_register">Register</string>

    <!--_________________________________________________________________________________________-->
    <!--fragment selected device-->
    <string name="txt_50">50%</string>
    <string name="txt_turn_on_for_more_3_hrs">turn on for more 3 hrs!</string>
    <string name="txt_schedule">Schedule</string>
    <string name="txt_is_set_to_turn_off_at_2_00_am_everyday">is set to turn off at 2:00 am everyday</string>

    <!--_________________________________________________________________________________________-->
    <!--Navigation bottom-->
    <string name="tit_home">Home</string>
    <string name="tit_devices">Devices</string>
    <string name="tit_goal">Goal</string>
    <string name="tit_alerts">Alerts</string>
    <string name="tit_more">More</string>

    <!--_________________________________________________________________________________________-->
    <!--Devices-->
    <string name="tit_air_conditioner">Air Conditioner</string>
    <string name="tit_fridge">Fridge</string>
    <string name="tit_tv">TV</string>
    <string name="tit_another_device">Another device</string>
    <string name="txt_for_smart_amp_easy_life"><![CDATA[For smart & easy life]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_billing">Billing</string>
    <string name="txt_report">Report</string>
    <string name="txt_deviceSettings">Device settings</string>
    <string name="txt_there_are_no_alerts">There are no alerts</string>
    <string name="txt_icon">Icon</string>
    <string name="hint_device_name">Device name</string>
    <string name="txt_custom_alert">Custom alerts</string>
    <string name="txt_add_schedule">Add schedule</string>
    <string name="tit_delete">Delete</string>
    <string name="tit_save">Save</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="txt_reset_password">Reset Password!</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_cancel">Cancel</string>
    <string name="hint_ssid">SSID</string>
    <string name="tit_settings">Settings</string>
    <string name="txt_repeat">Repeat</string>
    <string name="txt_sat">Sat</string>
    <string name="txt_sun">Sun</string>
    <string name="txt_mon">Mon</string>
    <string name="txt_tue">Tue</string>
    <string name="txt_wed">Wed</string>
    <string name="txt_thu">Thu</string>
    <string name="txt_fri">Fri</string>
    <string name="txt_select_days">Select days</string>
    <string name="txt_at">At</string>
    <string name="txt_after">After</string>
    <string name="txt_add_custom_alert">Add custom alert</string>
    <string name="txt_when">When</string>
    <string name="txt_ON">ON</string>
    <string name="txt_On">On</string>
    <string name="txt_12_am">12 AM</string>
    <string name="txt_add_new_plug">Add new plug!</string>
    <string name="txt_select_device">Select device</string>
    <string name="txt_consumed">Consumed</string>
    <string name="txt_edit_custom_alert">Edit custom alert</string>
    <string name="txt_edit_goal">Edit goal</string>
    <string name="txt_edit_schedule">Edit schedule</string>
    <string name="txt_everyday">Everyday</string>
    <string name="txt_realtime">Realtime</string>
    <string name="txt_save">Save</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_max_usage">Max usage</string>
    <string name="txt_loading">Loading…</string>
    <string name="txt_tv_is_set_to_turn_off_at_12_00_everyday">TV is set to turn off at 12:00 Everyday</string>
    <string name="txt_30_w">30 W</string>
    <string name="txt_80_w">80 W</string>
    <string name="txt_120_w">120 W</string>
    <string name="txt_45_w">45 W</string>
    <string name="txt_160_w">160 W</string>
    <string name="txt_250_w">250 W</string>
    <string name="txt_turn">Turn</string>
</resources>