<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_move_complete"
    android:layout_margin="@dimen/_4sdp"
    android:padding="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialogGoal_iv_icon"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:contentDescription="@string/txt_null"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/dialogGoal_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/tit_home"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialogGoal_iv_icon"
        app:layout_constraintStart_toEndOf="@+id/dialogGoal_iv_icon"
        app:layout_constraintTop_toTopOf="@+id/dialogGoal_iv_icon" />

    <ImageView
        android:id="@+id/dialogGoal_iv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/txt_null"
        android:src="@drawable/ic_checked"
        app:layout_constraintBottom_toBottomOf="@+id/dialogGoal_iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogGoal_iv_icon" />

    <TextView
        android:id="@+id/TUse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/txt_used"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialogGoal_iv_icon"
        app:layout_constraintTop_toBottomOf="@+id/dialogGoal_iv_icon" />

    <TextView
        android:id="@+id/TUse1V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/txt_100kw_1500kw"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/TUse1"
        app:layout_constraintEnd_toEndOf="@+id/dialogGoal_iv_result"
        app:layout_constraintTop_toTopOf="@+id/TUse1" />


    <TextView
        android:id="@+id/TPre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/txt_predicted"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/TUse1"
        app:layout_constraintTop_toBottomOf="@+id/TUse1" />

    <TextView
        android:id="@+id/dialogGoal_TPre1V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/txt_goal_will_be_achieved"
        android:textColor="@color/green"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/TPre1"
        app:layout_constraintEnd_toEndOf="@+id/TUse1V"
        app:layout_constraintTop_toTopOf="@+id/TPre1" />

    <TextView
        android:id="@+id/TBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/txt_used_100kw"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TBar1V"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TPre1" />

    <TextView
        android:id="@+id/TBar1V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_estimated_200kw"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/TBar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TBar1"
        app:layout_constraintTop_toTopOf="@+id/TBar1" />

</androidx.constraintlayout.widget.ConstraintLayout>